@@ -1,5 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <anjuta-macros>
+
+<macro _name="Date_Time" _category="Basic" _shortcut=""><![CDATA[@DATE_TIME@|]]></macro>
+<macro _name="UserName" _category="Basic" _shortcut=""><![CDATA[@USER_NAME@|]]></macro>
+
+<macro _name="Header_c" _category="C" _shortcut=""><![CDATA[/***************************************************************************
+ *            @FILE_NAME@
+ *
+ *  @DATE_TIME@
+ *  Copyright  @DATE_Y@  @USER_NAME@
+ *  <@EMAIL@>
+ ****************************************************************************/
+
+|]]></macro>
+<macro _name="Header_h" _category="C" _shortcut=""><![CDATA[#ifndef _@FILE_NAME_UP_PREFIX@_H
+#define _@FILE_NAME_UP_PREFIX@_H
+
+#ifdef __cplusplus
+extern "C"
+{
+#endif
+
+
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif /* _@FILE_NAME_UP_PREFIX@_H */
+
+|]]></macro>
 <macro _name="switch" _category="C" _shortcut=""><![CDATA[switch (|)
 {
 	case  :
@@ -35,8 +65,7 @@ else
 	;
 }]]></macro>
 
-<macro _name="/* GPL */" _category="Licenses" _shortcut=""><![CDATA[
-/*
+<macro _name="/* GPL */" _category="Licenses" _shortcut=""><![CDATA[/*
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or
@@ -52,9 +81,8 @@ else
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
  
- ]]></macro>
-<macro _name="// GPL" _category="Licenses" _shortcut=""><![CDATA[
-// This program is free software; you can redistribute it and/or modify
+| ]]></macro>
+<macro _name="// GPL" _category="Licenses" _shortcut=""><![CDATA[// This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
 // the Free Software Foundation; either version 2 of the License, or
 // (at your option) any later version.
@@ -68,9 +96,8 @@ else
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-]]></macro>
-<macro _name="# GPL" _category="Licenses" _shortcut=""><![CDATA[
-# This program is free software; you can redistribute it and/or modify
+| ]]></macro>
+<macro _name="# GPL" _category="Licenses" _shortcut=""><![CDATA[# This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
@@ -84,10 +111,9 @@ else
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-]]></macro>
+| ]]></macro>
 
-<macro _name="/* LGPL */" _category="Licenses" _shortcut=""><![CDATA[
-/*
+<macro _name="/* LGPL */" _category="Licenses" _shortcut=""><![CDATA[/*
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
@@ -105,9 +131,8 @@ else
  *            Boston,  MA  02111-1307, USA.
  */
  
- ]]></macro>
-<macro _name="// LGPL" _category="Licenses" _shortcut=""><![CDATA[
-// This program is free software; you can redistribute it and/or
+| ]]></macro>
+<macro _name="// LGPL" _category="Licenses" _shortcut=""><![CDATA[// This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
 // License as published by the Free Software Foundation; either
 // version 2.1 of the License, or (at your option) any later version.
@@ -123,9 +148,8 @@ else
 //            59 Temple Place - Suite 330,
 //            Boston,  MA  02111-1307, USA.
 
-]]></macro>
-<macro _name="# LGPL" _category="Licenses" _shortcut=""><![CDATA[
-# This program is free software; you can redistribute it and/or modify
+| ]]></macro>
+<macro _name="# LGPL" _category="Licenses" _shortcut=""><![CDATA[# This program is free software; you can redistribute it and/or modify
 #  This program is free software; you can redistribute it and/or
 #  modify it under the terms of the GNU Lesser General Public
 #  License as published by the Free Software Foundation; either
@@ -142,89 +166,52 @@ else
 #             59 Temple Place - Suite 330,
 #             Boston,  MA  02111-1307, USA.
 
-]]></macro>
+| ]]></macro>
 
-<macro _name="cvs_author" _category="CVS" _shortcut=""><![CDATA[Author:]]></macro>
-<macro _name="cvs_date" _category="CVS" _shortcut=""><![CDATA[Date:]]></macro>
-<macro _name="cvs_header" _category="CVS" _shortcut=""><![CDATA[Header:]]></macro>
-<macro _name="cvs_id" _category="CVS" _shortcut=""><![CDATA[Id:]]></macro>
-<macro _name="cvs_log" _category="CVS" _shortcut=""><![CDATA[Log:]]></macro>
-<macro _name="cvs_name" _category="CVS" _shortcut=""><![CDATA[Name:]]></macro>
-<macro _name="cvs_revision" _category="CVS" _shortcut=""><![CDATA[Revision:]]></macro>
-<macro _name="cvs_source" _category="CVS" _shortcut=""><![CDATA[Source:]]></macro>
+<macro _name="cvs_author" _category="CVS" _shortcut=""><![CDATA[Author:|]]></macro>
+<macro _name="cvs_date" _category="CVS" _shortcut=""><![CDATA[Date:|]]></macro>
+<macro _name="cvs_header" _category="CVS" _shortcut=""><![CDATA[Header:|]]></macro>
+<macro _name="cvs_id" _category="CVS" _shortcut=""><![CDATA[Id:|]]></macro>
+<macro _name="cvs_log" _category="CVS" _shortcut=""><![CDATA[Log:|]]></macro>
+<macro _name="cvs_name" _category="CVS" _shortcut=""><![CDATA[Name:|]]></macro>
+<macro _name="cvs_revision" _category="CVS" _shortcut=""><![CDATA[Revision:|]]></macro>
+<macro _name="cvs_source" _category="CVS" _shortcut=""><![CDATA[Source:|]]></macro>
 
-<macro _name="File_Name" _category="Basic" _shortcut=""><![CDATA[@FILE_NAME@]]></macro>
-<macro _name="File_Name_Up" _category="Basic" _shortcut=""><![CDATA[@FILE_NAME_UP@]]></macro>
-<macro _name="File_Name_Up_Prefix" _category="Basic" _shortcut=""><![CDATA[@FILE_NAME_UP_PREFIX@]]></macro>
-<macro _name="Date_Time" _category="Basic" _shortcut=""><![CDATA[@DATE_TIME@]]></macro>
-<macro _name="Date_Ymd" _category="Basic" _shortcut=""><![CDATA[@DATE_YMD@]]></macro>
-<macro _name="Date_Y" _category="Basic" _shortcut=""><![CDATA[@DATE_Y@]]></macro>
-<macro _name="UserName" _category="Basic" _shortcut=""><![CDATA[@USER_NAME@]]></macro>
-<macro _name="Email" _category="Basic" _shortcut=""><![CDATA[@EMAIL@]]></macro>
-
-<macro _name="Copyright" _category="EXPAND" _shortcut=""><![CDATA[Copyright  @DATE_Y@  @USER_NAME@]]></macro>
-<macro _name="Changelog" _category="EXPAND" _shortcut=""><![CDATA[@DATE_YMD@  @USER_NAME@  <@EMAIL@>
-]]></macro>
-
-<macro _name="Header_h" _category="EXPAND" _shortcut=""><![CDATA[
-#ifndef _@FILE_NAME_UP_PREFIX@_H
-#define _@FILE_NAME_UP_PREFIX@_H
-
-#ifdef __cplusplus
-extern "C"
-{
-#endif
-
-
-
-#ifdef __cplusplus
-}
-#endif
-
-#endif /* _@FILE_NAME_UP_PREFIX@_H */
-
-]]></macro>
-<macro _name="Header_c" _category="EXPAND" _shortcut=""><![CDATA[
-/***************************************************************************
- *            @FILE_NAME@
- *
- *  @DATE_TIME@
- *  Copyright  @DATE_Y@  @USER_NAME@
- *  <@EMAIL@>
- ****************************************************************************/
-
-]]></macro>
-<macro _name="Header_cpp" _category="EXPAND" _shortcut=""><![CDATA[
-//           @FILE_NAME@
+<macro _name="Copyright" _category="Ext." _shortcut=""><![CDATA[Copyright  @DATE_Y@  @USER_NAME@
+|]]></macro>
+<macro _name="Changelog" _category="Ext." _shortcut=""><![CDATA[@DATE_YMD@  @USER_NAME@  <@EMAIL@>
+|]]></macro>
+<macro _name="C_Custom_Indent" _category="Ext." _shortcut=""><![CDATA[/* -*- Mode: C; @USETABS@; @INDENTSIZE@; @TABSIZE@ -*- */
+|]]></macro>
+<macro _name="Header_cpp" _category="Ext." _shortcut=""><![CDATA[//           @FILE_NAME@
 //  @DATE_TIME@
 //  Copyright  @DATE_Y@  @USER_NAME@
 //  <@EMAIL@>
 
-]]></macro>
-<macro _name="Header_csharp" _category="EXPAND" _shortcut=""><![CDATA[
-// <file>
+|]]></macro>
+<macro _name="Header_csharp" _category="Ext." _shortcut=""><![CDATA[// <file>
 //     <copyright see="prj:///doc/copyright.txt"/>
 //     <license see="prj:///doc/license.txt"/>
 //     <owner name="@USER_NAME@"  email="@EMAIL@"/>
 //     <version value="version"/>
 // </file>
 
-]]></macro>
-<macro _name="Header_perl" _category="EXPAND" _shortcut=""><![CDATA[#!/usr/bin/perl -w
+|]]></macro>
+<macro _name="Header_perl" _category="Ext." _shortcut=""><![CDATA[#!/usr/bin/perl -w
 
 #           @FILE_NAME@
 #  @DATE_TIME@
 #  Copyright  @DATE_Y@  @USER_NAME@
 #  <@EMAIL@>
 
-]]></macro>
-<macro _name="Header_shell" _category="EXPAND" _shortcut=""><![CDATA[#!/bin/sh 
+|]]></macro>
+<macro _name="Header_shell" _category="Ext." _shortcut=""><![CDATA[#!/bin/sh 
 
 #           @FILE_NAME@
 #  @DATE_TIME@
 #  Copyright  @DATE_Y@  @USER_NAME@
 #  <@EMAIL@>
 
-]]></macro>
+|]]></macro>
 
 </anjuta-macros>
